WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44866
Strings returned by asciiDebug() should be NULL-terminated.
https://bugs.webkit.org/show_bug.cgi?id=44866
Summary
Strings returned by asciiDebug() should be NULL-terminated.
Andy Estes
Reported
2010-08-30 04:24:43 PDT
Strings returned by asciiDebug() should be NULL-terminated.
Attachments
Patch
(1.18 KB, patch)
2010-08-30 04:28 PDT
,
Andy Estes
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2010-08-30 04:28:02 PDT
Created
attachment 65906
[details]
Patch
Brian Weinstein
Comment 2
2010-08-30 10:50:34 PDT
Is our style to have a space to make it "length + 1"? The style bot didn't notice any issues, but I wasn't sure.
Andy Estes
Comment 3
2010-08-30 12:10:43 PDT
Brian, I think you're right. I'll fix that before landing.
Andy Estes
Comment 4
2010-08-30 12:27:54 PDT
Committed
r66401
: <
http://trac.webkit.org/changeset/66401
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug