2010-08-30  Andy Estes  <aestes@apple.com>

Reviewed by Eric Carlson.

        Strings returned by asciiDebug() should be NULL-terminated.
        https://bugs.webkit.org/show_bug.cgi?id=44866

        * wtf/text/WTFString.cpp:
        (asciiDebug):


Canonical link: https://commits.webkit.org/57165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66401 268f45cc-cd09-0410-ab3c-d52691b4dbfc